--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
 	"author": "re-knownout <knownout@hotmail.com>",
 	"license": "MIT",
 	"devDependencies": {
+		"@editorjs/editorjs": "^2.22.2",
+		"@editorjs/header": "^2.6.1",
+		"@editorjs/inline-code": "^1.3.1",
+		"@editorjs/link": "^2.3.1",
+		"@editorjs/list": "^1.6.2",
+		"@editorjs/marker": "^1.2.2",
+		"@editorjs/paragraph": "^2.8.0",
+		"@editorjs/quote": "^2.4.0",
+		"@editorjs/warning": "^1.2.0",
+		"@types/crypto-js": "^4.0.2",
 		"@types/enzyme": "^3.10.5",
 		"@types/enzyme-adapter-react-16": "^1.0.6",
 		"@types/html-webpack-plugin": "^3.2.2",
@@ -21,8 +31,10 @@
 		"@types/webpack": "^4.41.5",
 		"@types/webpack-dev-server": "^3.10.0",
 		"autoprefixer": "^9.7.4",
+		"crypto-js": "^4.1.1",
 		"css-loader": "^3.4.2",
 		"editorjs-blocks-react-renderer": "^1.1.1",
+		"editorjs-text-alignment-blocktune": "^1.0.2",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
 		"html-webpack-plugin": "^3.2.0",
@@ -63,5 +75,6 @@
 		"dev-server": "webpack-dev-server --mode=\"development\" --",
 		"test": "jest --verbose",
 		"test:watch": "jest --verbose --watchAll --noStackTrace"
-	}
+	},
+	"dependencies": {}
 }
