--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"@editorjs/editorjs": "^2.22.2",
 		"@editorjs/header": "^2.6.1",
+		"@editorjs/image": "^2.6.1",
 		"@editorjs/inline-code": "^1.3.1",
 		"@editorjs/link": "^2.3.1",
 		"@editorjs/list": "^1.6.2",
@@ -27,6 +28,7 @@
 		"@types/react-dom": "^16.9.5",
 		"@types/react-html-parser": "^2.0.1",
 		"@types/react-router-dom": "^5.1.3",
+		"@types/react-time-picker": "^4.0.2",
 		"@types/uglifyjs-webpack-plugin": "^1.1.0",
 		"@types/webpack": "^4.41.5",
 		"@types/webpack-dev-server": "^3.10.0",
@@ -47,9 +49,12 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"postcss-loader": "^3.0.0",
 		"react": "^16.12.0",
+		"react-date-picker": "^8.3.3",
+		"react-datetime-picker": "^3.4.1",
 		"react-dom": "^16.12.0",
 		"react-html-parser": "^2.0.2",
 		"react-router-dom": "^5.1.2",
+		"react-time-picker": "^4.4.2",
 		"style-loader": "^1.1.3",
 		"ts-jest": "^26.1.0",
 		"ts-loader": "^6.2.1",
