--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@types/react-dom": "^16.9.5",
 		"@types/react-html-parser": "^2.0.1",
 		"@types/react-router-dom": "^5.1.3",
-		"@types/react-time-picker": "^4.0.2",
+		"@types/react-scrollbar": "^0.5.2",
 		"@types/uglifyjs-webpack-plugin": "^1.1.0",
 		"@types/webpack": "^4.41.5",
 		"@types/webpack-dev-server": "^3.10.0",
@@ -49,12 +49,10 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"postcss-loader": "^3.0.0",
 		"react": "^16.12.0",
-		"react-date-picker": "^8.3.3",
-		"react-datetime-picker": "^3.4.1",
 		"react-dom": "^16.12.0",
 		"react-html-parser": "^2.0.2",
 		"react-router-dom": "^5.1.2",
-		"react-time-picker": "^4.4.2",
+		"react-scrollbar": "^0.5.6",
 		"style-loader": "^1.1.3",
 		"ts-jest": "^26.1.0",
 		"ts-loader": "^6.2.1",
