--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/node": "^13.13.9",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/react": "^16.9.19",
+		"@types/react-calendar": "^3.4.3",
 		"@types/react-dom": "^16.9.5",
 		"@types/react-html-parser": "^2.0.1",
 		"@types/react-router-dom": "^5.1.3",
@@ -49,6 +50,7 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"postcss-loader": "^3.0.0",
 		"react": "^16.12.0",
+		"react-calendar": "^3.4.0",
 		"react-dom": "^16.12.0",
 		"react-html-parser": "^2.0.2",
 		"react-router-dom": "^5.1.2",
