--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "re-knownout <knownout@hotmail.com>",
 	"license": "MIT",
 	"devDependencies": {
+		"@editorjs/delimiter": "^1.2.0",
 		"@editorjs/editorjs": "^2.22.2",
 		"@editorjs/header": "^2.6.1",
 		"@editorjs/image": "^2.6.1",
@@ -28,6 +29,7 @@
 		"@types/react-calendar": "^3.4.3",
 		"@types/react-dom": "^16.9.5",
 		"@types/react-html-parser": "^2.0.1",
+		"@types/react-paginate": "^7.1.1",
 		"@types/react-router-dom": "^5.1.3",
 		"@types/react-scrollbar": "^0.5.2",
 		"@types/uglifyjs-webpack-plugin": "^1.1.0",
@@ -53,6 +55,7 @@
 		"react-calendar": "^3.4.0",
 		"react-dom": "^16.12.0",
 		"react-html-parser": "^2.0.2",
+		"react-paginate": "^7.1.3",
 		"react-router-dom": "^5.1.2",
 		"react-scrollbar": "^0.5.6",
 		"style-loader": "^1.1.3",
