--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "re-knownout <knownout@hotmail.com>",
 	"license": "MIT",
 	"devDependencies": {
+		"@editorjs/attaches": "^1.2.0",
 		"@editorjs/delimiter": "^1.2.0",
 		"@editorjs/editorjs": "^2.22.2",
 		"@editorjs/header": "^2.6.1",
@@ -16,6 +17,7 @@
 		"@editorjs/marker": "^1.2.2",
 		"@editorjs/paragraph": "^2.8.0",
 		"@editorjs/quote": "^2.4.0",
+		"@editorjs/table": "^2.0.1",
 		"@editorjs/warning": "^1.2.0",
 		"@types/crypto-js": "^4.0.2",
 		"@types/enzyme": "^3.10.5",
@@ -42,6 +44,7 @@
 		"editorjs-text-alignment-blocktune": "^1.0.2",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
+		"filesize": "^8.0.3",
 		"html-webpack-plugin": "^3.2.0",
 		"jest": "^26.0.1",
 		"jszip": "^3.6.0",
@@ -54,6 +57,7 @@
 		"react": "^16.12.0",
 		"react-calendar": "^3.4.0",
 		"react-dom": "^16.12.0",
+		"react-editorjs-renderer": "^2.4.2",
 		"react-html-parser": "^2.0.2",
 		"react-paginate": "^7.1.3",
 		"react-router-dom": "^5.1.2",
